<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:title="@string/map"
        android:icon="@drawable/ic_map"
        android:color="?android:attr/colorControlNormal"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_language"
        android:icon="@drawable/ic_language"
        android:title="@string/language"
        android:color="?android:attr/colorControlNormal"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        android:color="?android:attr/colorControlNormal"
        app:showAsAction="ifRoom" />

</menu>