...
    <string name="include_location">Add the current location</string>
    <string name="location_denied">Access to location was denied</string>
    <string name="get_location">Successfully retrieved location</string>
    <string name="location_not_found">Current location could not be found</string>
    <string name="map_style_parsing_failed">Failed to process map style</string>
    <string name="can_t_find_style_error">Unable to locate the style. Error: %1$s</string>
    <string name="yes">Confirm</string>
    <string name="change_language">Switch Language</string>
    <string name="cancel">Abort</string>
    <string name="title_activity_maps">Map Activity</string>
    <string name="login">Sign In</string>
    <string name="camera_capture_canceled">camera canceled</string>
</resources>
